--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="flow"></div>
     <canvas id="myCanvas"></canvas>
-    <div id="resultViz"></div>
+    <div id="heatmap"></div>
 
   </body>
 </html>
