--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
   <head>
     <meta charset="utf-8">
     <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <script src="https://use.fontawesome.com/088192dd9c.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
     <title>Test</title>
   </head>
   <body>
-    <div id="sankey"></div>
+    <header>
+      <h1>cerebellum</h1>
+      <span class="subtitle">Explore a neural network without leaving your browser.</span>
+    </header>
+    <aside class="controls">
+      <a><i class="fa fa-play"/></a>
+    </aside>
     <canvas id="myCanvas"></canvas>
+    <div id="sankey"></div>
     <div id="heatmap"></div>
+    <footer>
 
+    </footer>
   </body>
 </html>
