fix heatmap size

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <div id="sankey"></div>
     <canvas id="myCanvas"></canvas>
-    <div id="heatmap"></div>
+    <div id="heatmap" style="display:none"></div>
+    <div id="real-heatmap"></div>
 
   </body>
 </html>
