--- a/index.html
+++ b/index.html
@@ -57,23 +57,26 @@
 
       <div id="data">
         <h4>Data</h4>
+
       </div>
       <div id="neurons">
         <h4>Neurons</h4>
+        <div id="sankey"></div>
       </div>
       <div id="output">
         <h4>Output</h4>
+        <div id="real-heatmap"></div>
       </div>
     </div>
   </main>
-    <!-- <a class="circular-raised-button"><i class="fa fa-plus"></i></a>
-    <canvas id="myCanvas"></canvas>
-    <div id="heatmap" style="display:none"></div>
-    <div id="real-heatmap"></div>
-    <div id="sankey"></div>
-    <div id="heatmap"></div>
-    <footer> -->
+    <a class="circular-raised-button"><i class="fa fa-plus"></i></a>
 
+
+
+
+    <footer>
+      <div id="heatmap" style="display:none"></div>
+      <canvas id="data-sampler" style="display: none"></canvas>
     </footer>
   </body>
 </html>
