--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
       </div>
       <div id="neurons">
         <h4>Neurons</h4>
+        <a class="circular-raised-button"><i class="fa fa-plus"></i></a>
+        <a class="circular-raised-button"><i class="fa fa-minus"></i></a>
         <div id="sankey"></div>
       </div>
       <div id="output">
@@ -69,7 +71,7 @@
       </div>
     </div>
   </main>
-    <a class="circular-raised-button"><i class="fa fa-plus"></i></a>
+
 
 
 
