--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <option value="0.003">0.003</option>
             <option value="0.01">0.03</option>
             <option value="0.03">0.03</option>
-            <option value="0.1">0.1</option>
+            <option value="0.1" selected="true">0.1</option>
             <option value="0.3">0.3</option>
             <option value="1">1</option>
             <option value="3">3</option>
@@ -46,8 +46,8 @@
         <div class="control">
           <h3>Activation Function</h3>
           <select class="control-menu" id="activation-function">
+            <option value="tanh" selected="true">Tanh</option>
             <option value="sigmoid">Sigmoid</option></option>
-            <option value="tanh">Tanh</option>
           </select>
         </div>
       </div>
@@ -66,13 +66,12 @@
       </div>
     </div>
   </main>
-    <!-- <a class="circular-raised-button"><i class="fa fa-plus"></i></a>
+    <a class="circular-raised-button"><i class="fa fa-plus"></i></a>
     <canvas id="myCanvas"></canvas>
     <div id="heatmap" style="display:none"></div>
     <div id="real-heatmap"></div>
     <div id="sankey"></div>
-    <div id="heatmap"></div>
-    <footer> -->
+    <footer>
 
     </footer>
   </body>
