--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <h4>Data</h4>
         Select whatever dataset you feel like and let the hype ensue.
         <div id="data-thumb-gallery">
-            <img data-image-url="http://res.cloudinary.com/dkpumd3gf/image/upload/v1480578743/sample_data1_ueqzur.jpg" class="data-thumb" src="http://res.cloudinary.com/dkpumd3gf/image/upload/c_scale,w_75/v1480578743/sample_data1_ueqzur.jpg"/>
-            <img data-image-url="http://res.cloudinary.com/dkpumd3gf/image/upload/v1480578748/sample_data2_e63tk6.jpg" class="data-thumb" src="http://res.cloudinary.com/dkpumd3gf/image/upload/c_scale,w_75/v1480578748/sample_data2_e63tk6.jpg"/>
-            <img data-image-url="http://res.cloudinary.com/dkpumd3gf/image/upload/v1480578751/sample_data3_u2tlnj.jpg" class="data-thumb" src="http://res.cloudinary.com/dkpumd3gf/image/upload/c_scale,w_75/v1480578751/sample_data3_u2tlnj.jpg"/>
-            <img data-image-url="http://res.cloudinary.com/dkpumd3gf/image/upload/v1480578753/sample_data4_g78zi4.jpg" class="data-thumb" src="http://res.cloudinary.com/dkpumd3gf/image/upload/c_scale,w_75/v1480578753/sample_data4_g78zi4.jpg"/>
+            <img data-image-url="images/sample_data1.jpg" class="data-thumb" src="images/sample_data1.jpg"/>
+            <img data-image-url="images/sample_data2.jpg" class="data-thumb" src="images/sample_data2.jpg"/>
+            <img data-image-url="images/sample_data3.jpg" class="data-thumb" src="images/sample_data3.jpg"/>
+            <img data-image-url="images/sample_data4.jpg" class="data-thumb" src="images/sample_data4.jpg"/>
         </div>
       </div>
       <div id="neurons">
