--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <script src="https://use.fontawesome.com/088192dd9c.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Test</title>
+    <title>Cerebellum Neural Network Playground</title>
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
       <div class="content-wrapper flexed">
         <div class="player-controls">
           <a class="circular-icon-button" id="reset-button"><i class="fa fa-refresh"></i></a>
-          <a class="circular-raised-button big" id="play-button"><div class="awesome-font-isnt-so-awesome"><i id="play-pause" class="fa fa-play"></i></div></a>
+          <a class="circular-raised-button big" id="play-button"><div class="font-awesome-isnt-so-awesome"><i id="play-pause" class="fa fa-play"></i></div></a>
           <a class="circular-icon-button" id="increment-button"><i class="fa fa-step-forward"></i></a>
         </div>
         <div class="control">
@@ -56,16 +56,80 @@
 
       <div id="data">
         <h4>Data</h4>
-        Select whatever dataset you feel like and let the hype ensue.
+        Select a dataset and click play to watch the neural net fit randomly generated sample data.
         <div id="data-thumb-gallery">
-            <img data-image-url="images/sample_data1.jpg" class="data-thumb" src="images/sample_data1.jpg"/>
+            <img data-image-url="images/sample_data1.jpg" class="data-thumb selected" src="images/sample_data1.jpg"/>
             <img data-image-url="images/sample_data2.jpg" class="data-thumb" src="images/sample_data2.jpg"/>
             <img data-image-url="images/sample_data3.jpg" class="data-thumb" src="images/sample_data3.jpg"/>
             <img data-image-url="images/sample_data4.jpg" class="data-thumb" src="images/sample_data4.jpg"/>
         </div>
       </div>
       <div id="neurons">
-        <h4>Neurons</h4>
+        <h4>Neural Net</h4>
+        <div class="net-controls">
+          <div class="layer-controls">
+            <div class="controls-label-wrapper">
+              <span class="add-remove-count" id="layer-count">2</span>
+              <span>hidden layers</span>
+            </div>
+            <div class="add-remove-controls">
+              <a class="circular-icon-button small show-bg" id="add-layer-button"><i class="fa fa-plus"></i></a>
+              <a class="circular-icon-button small show-bg" id="remove-layer-button"><i class="fa fa-minus"></i></a>
+            </div>
+          </div>
+          <ul class="neuron-controls">
+            <li id="neuron-buttons-1" class="show">
+              <div class="neuron-control-label">
+                <span class="add-remove-count" id="neuron-count-1">4</span>
+                <span>neurons</span>
+              </div>
+              <div class="add-remove-controls">
+                <a class="circular-icon-button small show-bg" id="add-neuron-button-1"><i class="fa fa-plus"></i></a>
+                <a class="circular-icon-button small show-bg" id="remove-neuron-button-1"><i class="fa fa-minus"></i></a>
+              </div>
+            </li>
+            <li id="neuron-buttons-2" class="show">
+              <div class="neuron-control-label">
+                <span class="add-remove-count" id="neuron-count-2">2</span>
+                <span>neurons</span>
+              </div>
+              <div class="add-remove-controls">
+                <a class="circular-icon-button small show-bg" id="add-neuron-button-2"><i class="fa fa-plus"></i></a>
+                <a class="circular-icon-button small show-bg" id="remove-neuron-button-2"><i class="fa fa-minus"></i></a>
+              </div>
+            </li>
+            <li id="neuron-buttons-3" class="hide">
+              <div class="neuron-control-label">
+                <span class="add-remove-count" id="neuron-count-3">2</span>
+                <span>neurons</span>
+              </div>
+              <div class="add-remove-controls">
+                <a class="circular-icon-button small show-bg" id="add-neuron-button-3"><i class="fa fa-plus"></i></a>
+                <a class="circular-icon-button small show-bg" id="remove-neuron-button-3"><i class="fa fa-minus"></i></a>
+              </div>
+            </li>
+            <li id="neuron-buttons-4" class="hide">
+              <div class="neuron-control-label">
+                <span class="add-remove-count" id="neuron-count-4">2</span>
+                <span>neurons</span>
+              </div>
+              <div class="add-remove-controls">
+                <a class="circular-icon-button small show-bg" id="add-neuron-button-4"><i class="fa fa-plus"></i></a>
+                <a class="circular-icon-button small show-bg" id="remove-neuron-button-4"><i class="fa fa-minus"></i></a>
+              </div>
+            </li>
+            <li id="neuron-buttons-5" class="hide">
+              <div class="neuron-control-label">
+                <span class="add-remove-count" id="neuron-count-5">2</span>
+                <span>neurons</span>
+              </div>
+              <div class="add-remove-controls">
+                <a class="circular-icon-button small show-bg" id="add-neuron-button-5"><i class="fa fa-plus"></i></a>
+                <a class="circular-icon-button small show-bg" id="remove-neuron-button-5"><i class="fa fa-minus"></i></a>
+              </div>
+            </li>
+          </ul>
+        </div>
         <div id="sankey"></div>
       </div>
       <div id="output">
@@ -76,48 +140,7 @@
   </main>
     <canvas id="myCanvas"></canvas>
     <div id="heatmap" style="display:none"></div>
-    <div id="real-heatmap"></div>
-    <div>
-      <div>
-        <span id="layer-count">2</span>
-        <span>LAYERS</span>
-        <a class="circular-icon-button" id="add-layer-button"><i class="fa fa-plus"></i></a>
-        <a class="circular-icon-button" id="remove-layer-button"><i class="fa fa-minus"></i></a>
-      </div>
-      <ul>
-        <div id="neuron-buttons-1" class="show">
-          <span id="neuron-count-1">4</span>
-          <span>NEURONS</span>
-          <a class="circular-icon-button" id="add-neuron-button-1"><i class="fa fa-plus"></i></a>
-          <a class="circular-icon-button" id="remove-neuron-button-1"><i class="fa fa-minus"></i></a>
-        </div>
-        <div id="neuron-buttons-2" class="show">
-          <span id="neuron-count-2">2</span>
-          <span>NEURONS</span>
-          <a class="circular-icon-button" id="add-neuron-button-2"><i class="fa fa-plus"></i></a>
-          <a class="circular-icon-button" id="remove-neuron-button-2"><i class="fa fa-minus"></i></a>
-        </div>
-        <div id="neuron-buttons-3" class="hide">
-          <span id="neuron-count-3">2</span>
-          <span>NEURONS</span>
-          <a class="circular-icon-button" id="add-neuron-button-3"><i class="fa fa-plus"></i></a>
-          <a class="circular-icon-button" id="remove-neuron-button-3"><i class="fa fa-minus"></i></a>
-        </div>
-        <div id="neuron-buttons-4" class="hide">
-          <span id="neuron-count-4">2</span>
-          <span>NEURONS</span>
-          <a class="circular-icon-button" id="add-neuron-button-4"><i class="fa fa-plus"></i></a>
-          <a class="circular-icon-button" id="remove-neuron-button-4"><i class="fa fa-minus"></i></a>
-        </div>
-        <div id="neuron-buttons-5" class="hide">
-          <span id="neuron-count-5">2</span>
-          <span>NEURONS</span>
-          <a class="circular-icon-button" id="add-neuron-button-5"><i class="fa fa-plus"></i></a>
-          <a class="circular-icon-button" id="remove-neuron-button-5"><i class="fa fa-minus"></i></a>
-        </div>
-      </ul>
-      <div id="sankey"></div>
-    </div>
+
     <footer>
 
 
