--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       <div class="content-wrapper">
+        <image src="images/brain2.png" width="90px" height="auto" style="float: left; margin-right: 1rem; position: relative; top: 10px;"/>
         <h1>cerebellum</h1>
         <span class="subtitle">Explore a neural network without leaving your browser.</span>
       </div>
